--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,133 @@
-.App {
-  text-align: center;
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+
+* {
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  padding: 0;
+  margin: 0;
+  background-color: #ebf2fe;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  background-color: #201f2d;
+  color: white;
+  height: 50px;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.menu {
+  background-color: white;
+  height: 70px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu a {
+  font-size: 18px;
+  font-weight: 600;
+  color: #000000;
+  height: 40px;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  text-decoration: none;
+  margin-left: 15px;
+}
+
+.menu a.active{
+  background-color: #2563eb;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.menu a:hover{
+  background-color: #2563eb;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-custom {
+  background-color: white;
+  padding: 15px;
+  margin-top: 15px;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.12);
+  width: 600px;
+}
+
+.container-custom {
+  display: flex;
+  justify-content: center
+}
+
+.pokemon .card{
+  text-align: center;
+  border: 0;
+  border-radius: 10px;
+  padding: 15px;
+}
+
+.pokemon .card-img {
+  background-color: #ebf2fe;
+  padding: 10px;
+  border-radius: 50%;
+  width: 90px;
+  height: 90px;
+  margin: 0 auto;
+}
+
+.pokemon .card-placeholder-img {
+  background-color: #d4d3d8;
+  padding: 10px;
+  border-radius: 50%;
+  width: 90px;
+  height: 90px;
+  margin: 0 auto;
+}
+
+.card-placeholder-name {
+  background-color: #d4d3d8;
+  width: 100%;
+  height: 15px;
+  border-radius: 20px;
+  margin-top: 10px;
+}
+
+.border-red {
+  border-color: red;
+}
+
+.result {
+  background-color: #f4f4f4;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.result p {
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.shopOne {
+  background-color: #201f2d;
+  border-radius: 10px;
+  padding: 15px;
+  color: white;
+  width: 350px;
+  margin: 0 auto;
+  margin-top: 15px;
+}
+
+pre {
+  color: white;
 }
