--- a/src/App.css
+++ b/src/App.css
@@ -118,7 +118,7 @@ header {
   margin-bottom: 5px;
 }
 
-.shopOne {
+.boxcode {
   background-color: #201f2d;
   border-radius: 10px;
   padding: 15px;
