--- a/src/App.css
+++ b/src/App.css
@@ -123,11 +123,27 @@ header {
   border-radius: 10px;
   padding: 15px;
   color: white;
-  width: 350px;
+  width: 320px;
   margin: 0 auto;
   margin-top: 15px;
 }
 
 pre {
   color: white;
+}
+
+@media (max-width: 575.98px) {
+  .menu a {
+    font-size: 12px;
+    font-weight: 600;
+    color: #000000;
+    height: 40px;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-left: 0px;
+  }
 }
